fix wscompile tests to work with surefire-M5, remove obsolete tests
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>